package com.telecom.authentication.domain.model;

public enum UserStatus {
    ACTIVE,
    DISABLED,
    PENDING_PASSWORD
}
